force-app/main/default/objects/RAID_Log__c/RAID_Log__c.object-meta.xml
<CustomObject>
    <label>RAID Log</label>
    <nameField>
        <displayFormat>RAID-{000000}</displayFormat>
        <label>RAID Log Entry Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RAID Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>