force-app/main/default/objects/RAID_Log__c/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RAID_Log</relationshipName>
    <type>Lookup</type>
</CustomField>