force-app/main/default/objects/RAID_Log__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature</label>
    <referenceTo>Project_Feature__c</referenceTo>
    <relationshipLabel>RAID Log</relationshipLabel>
    <relationshipName>RAID_Log</relationshipName>
    <type>Lookup</type>
</CustomField>