force-app/main/default/objects/RAID_Log__c/fields/Hide_from_customer__c.field-meta.xml
<CustomField>
    <fullName>Hide_from_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to hide from customer in customer portal and on weekly report</description>
    <label>Hide from customer</label>
    <type>Checkbox</type>
</CustomField>