force-app/main/default/objects/RAID_Log__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>