force-app/main/default/objects/RAID_Log__c/fields/Mitigation_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Resolution__c</fullName>
    <label>Mitigation / Resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>