force-app/main/default/objects/RAID_Log__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
                <label>1 - Highest</label>
            </value>
            <value>
                <fullName>Critical</fullName>
                <label>2 - High</label>
            </value>
            <value>
                <fullName>Moderate</fullName>
                <label>3 - Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <label>4 - Low</label>
            </value>
            <value>
                <fullName>5 - Lowest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>