force-app/main/default/objects/RAID_Log__c/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>