force-app/main/default/objects/RAID_Log__c/fields/Work_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Item</label>
    <referenceTo>Work_Item__c</referenceTo>
    <relationshipLabel>RAID Log</relationshipLabel>
    <relationshipName>RAID_Log</relationshipName>
    <type>Lookup</type>
</CustomField>