force-app/main/default/objects/RAID_Log__c/recordTypes/Action.recordType-meta.xml
<RecordType>
    <fullName>Action</fullName>
    <active>true</active>
    <description>Formerly Called &quot;Action&quot;</description>
    <label>Assumption</label>
</RecordType>