force-app/main/default/objects/RAID_Log__c/recordTypes/Decision.recordType-meta.xml
<RecordType>
    <fullName>Decision</fullName>
    <active>true</active>
    <description>Formerly known as &quot;Decision&quot;</description>
    <label>Dependency</label>
</RecordType>