force-app/main/default/objects/RAID_Log__c/listViews/Open_Issues.listView-meta.xml
<ListView>
    <fullName>Open_Issues</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Status__c</columns>
    <columns>Assign_To__c</columns>
    <columns>Work_Item__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RAID_Log__c.Issue</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Issues</label>
</ListView>