force-app/main/default/objects/RAID_Log__c/listViews/Open_RAID_Items.listView-meta.xml
<ListView>
    <fullName>Open_RAID_Items</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Assign_To__c</columns>
    <columns>Rating__c</columns>
    <columns>When__c</columns>
    <columns>Status__c</columns>
    <columns>Work_Item__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open RAID Items</label>
</ListView>